hard-gists/f3f67424adda343fef40/run.log
=== Docker Run Log for f3f67424adda343fef40 ===
Started at: Mi 29. Okt 21:26:05 CET 2025

[2025-10-29 21:26:05] START: Running container for f3f67424adda343fef40
[2025-10-29 21:26:05] SUCCESS: Container a8293d7981b3252f26c19ae1ce0bfe28b9567553dad8487cfa32092e36246d86 started for f3f67424adda343fef40
=== Container logs for f3f67424adda343fef40 ===
  File "/snippet.py", line 292
    print n
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for f3f67424adda343fef40 ===
[2025-10-29 21:26:07] INFO: Container a8293d7981b3252f26c19ae1ce0bfe28b9567553dad8487cfa32092e36246d86 has stopped
